addresses the add to cart visibilty issues

--- a/skin/frontend/wsu_base/foundation.store.wsu.edu/css/custom.css
+++ b/skin/frontend/wsu_base/foundation.store.wsu.edu/css/custom.css
@@ -108,5 +108,9 @@ body{
 .shipping-method-block{position:absolute !important; top:-9999em  !important; left:-9999em  !important;}
 * .opc-wrapper-opc .payment-block { margin-top:0px !important;}
 
+#check_out_products{position:fixed;bottom:0px;z-index:9; background-color:#00a5bd; color:#E5E5E5;}
+#mass_products{position:relative;}
+
+
 
 
